fix(ui/results-tree): fix results tree showing empty when the results change.
Previously, the results tree used an array, with items pushed to it.  However, the component requires onPush change detection, so this broke, and also meant trees couldn't be used for streaming results.

the result tree / ObjectView component now uses an observable.

Also, removed the usage of type info in the object-view.component.ts, as it broke whenever using anonymous types.

--- a/vyne-query-service/src/main/web/src/styles.scss
+++ b/vyne-query-service/src/main/web/src/styles.scss
@@ -16,8 +16,8 @@
     border-color: $border-dark
   ));
   .ag-header-cell-text {
-    font-family: $mono;
-    color: $dark-grey-1;
+    font-family: $headings-font;
+    color: $dark-grey-3;
     font-size: 1rem;
     font-weight: 400;
   }
