fix(query-editor): remove @materia-ui/ngx-monaco-editor and upgrade monaco-languageclient
this fixes issues with duplicate hints being shown when editing queries

--- a/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.html
@@ -1,4 +1,1 @@
-<ngx-monaco-editor [ngModel]="content"
-                   class="code-editor"
-                   (ngModelChange)="updateContent($event)">
-</ngx-monaco-editor>
+<div #codeEditorContainer class="code-editor"></div>
