--- a/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.scss
+++ b/vyne-query-service/src/main/web/src/app/code-editor/code-editor.component.scss
@@ -1,14 +1,4 @@
-ngx-monaco-editor {
-  height: 100%;
-
-}
-
 .code-editor {
+  width: 100%;
   height: 100%;
-  ::ng-deep .editor-container{
-    height: 100% !important;
-    .monaco-editor {
-      height: 100% !important;
-    }
-  }
 }
