feat(query-editor): add keyboard shortcut for running queries Ctrl+Enter

--- a/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-editor/query-editor.component.html
@@ -16,6 +16,7 @@
           <div class="code-viewer-container">
             <app-code-editor
               class="code-editor"
+              [actions]="customActions"
               [(content)]="query" #editor></app-code-editor>
           </div>
         </div>
