--- a/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
+++ b/vyne-query-service/src/main/web/src/app/query-panel/query-panel.component.html
@@ -1,10 +1,10 @@
-<app-header-bar title="Query wizard">
+<app-header-bar title="Query editor">
 </app-header-bar>
-<nav mat-tab-nav-bar>
-  <a mat-tab-link *ngFor="let link of links"
-     [routerLink]="link.link"
-     routerLinkActive #rla="routerLinkActive"
-     [active]="rla.isActive"
-  > {{link.label}} </a>
-</nav>
+<!--<nav mat-tab-nav-bar>-->
+<!--  <a mat-tab-link *ngFor="let link of links"-->
+<!--     [routerLink]="link.link"-->
+<!--     routerLinkActive #rla="routerLinkActive"-->
+<!--     [active]="rla.isActive"-->
+<!--  > {{link.label}} </a>-->
+<!--</nav>-->
 <router-outlet></router-outlet>
