added changelog ui

--- a/vyne-query-service/src/main/web/src/filters.scss
+++ b/vyne-query-service/src/main/web/src/filters.scss
@@ -27,3 +27,7 @@
 .filter-warning-light {
   filter:  invert(99%) sepia(24%) saturate(2399%) hue-rotate(331deg) brightness(103%) contrast(99%);
 }
+
+.filter-black-ish {
+  filter: invert(11%) sepia(3%) saturate(2699%) hue-rotate(160deg) brightness(96%) contrast(86%);
+}
