--- a/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.html
@@ -1,19 +1,10 @@
-<app-header-bar title="Schema Explorer">
-  <div class="add-new" *ngIf="config?.server.newSchemaSubmissionEnabled">
-    <button mat-stroked-button [routerLink]="['./import']">Add new</button>
-    <!--<mat-icon svgIcon="add_box"></mat-icon>-->
-    <!--Add a new one-->
-    <mat-menu #appMenu="matMenu">
-      <button mat-menu-item (click)="importSchemaFromUrl()">Add schema from url</button>
-      <!--<button mat-menu-item (click)="createNewSchema()">Add schema directly</button>-->
-    </mat-menu>
+<div *ngIf="parsedPackage" class="header-bar">
+  <div class="titles">
+    <h2>{{parsedPackage.metadata.identifier.name}}</h2>
+    <app-simple-badge-list [badges]="badges"></app-simple-badge-list>
   </div>
-</app-header-bar>
-<app-code-viewer [sources]="schemas | async" sidebarMode="Visible"
-                 *ngIf="(schemas | async)?.length>0"></app-code-viewer>
-<div *ngIf="(schemas | async)?.length==0" class="empty-state">
-  <img src="assets/img/getting-started.svg">
-  <div>There's nothing registered yet. Schemas will appear here as services register, or you can add
-    a new schema manually from the toolbar above.
-  </div>
+
 </div>
+<app-code-viewer [sources]="parsedPackage?.sources" sidebarMode="Visible"
+                 *ngIf="parsedPackage?.sources?.length>0"></app-code-viewer>
+
