--- a/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
@@ -1,40 +1,26 @@
 @import "src/theme";
 @import "src/toolbar";
+
 :host {
   background-color: $body-bg;
   display: flex;
   flex-direction: column;
   height: 100%;
+  margin: 1rem 2rem;
 }
 
-
-.spacer {
-  flex-grow: 1;
+.header-bar {
+  margin-bottom: 2rem;
+  display: flex;
 }
+
 app-code-viewer {
   width: 100%;
   // Use a fixed height, seems to make flex-grow work
   height: 10px;
   flex-grow: 1;
+  border: 1px solid rgba($vyne-lilac, 0.4);
+  border-radius: 4px;
 }
 
-
-:host .drop-down-toggle {
-  .mat-button-toggle-label-content {
-    padding: 0;
-  }
-}
-
-.empty-state {
-  text-align: center;
-  width: 500px;
-  font-size: 1.4rem;
-  opacity: 0.5;
-  margin: auto;
-
-  img {
-    width: 256px;
-    opacity: 0.4;
-  }
-}
 
