--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
@@ -4,8 +4,15 @@
 @import "src/typography";
 
 
+::ng-deep markdown {
+  pre {
+    max-height: 10rem;
+  }
+}
+
 .row {
   display: flex;
+
   span {
     font-size: 0.85rem;
     margin-right: 1rem;
