--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.scss
@@ -10,6 +10,14 @@
   }
 }
 
+.types-row {
+  display: flex;
+  align-items: center;
+  app-inherits-from {
+    margin-top: 0;
+    margin-left: 0.75rem;
+  }
+}
 .row {
   display: flex;
 
