added react wrapper for react flow

--- a/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
+++ b/vyne-query-service/src/main/web/src/app/type-viewer/type-viewer.component.html
@@ -52,6 +52,7 @@
     <h3>Services</h3>
     <app-usages-table [typeUsages]="typeUsages"></app-usages-table>
     <h3>Chart</h3>
+    <app-schema-diagram [schema]="schema"></app-schema-diagram>
     <mat-button-toggle-group #chartSelectorchartSelector="matButtonToggleGroup" [(value)]="chartDisplayMode"
                              appearance="legacy">
       <mat-button-toggle value="links">Links</mat-button-toggle>
