--- a/vyne-query-service/src/main/web/src/app/landing-page/landing-page.component.scss
+++ b/vyne-query-service/src/main/web/src/app/landing-page/landing-page.component.scss
@@ -1,33 +1,49 @@
-.page-content {
+:host {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: unset; // remove height 100%
-  padding: 2rem 2rem 0; // override padding to remove the bottom
+  width: 100%;
+  height: 100%;
+  flex-grow: 1;
+  padding: 2rem 0 0; // override padding to remove the bottom
 }
 
-.row {
-  max-width: 1200px;
+.container {
   width: 100%;
   display: flex;
   margin-bottom: 2rem;
+  padding: 0;
+  flex-grow: 1;
+  height: 10px;
 }
 
-.card-row {
-  justify-content: space-between;
-
-  app-landing-card {
-    flex-grow: 1;
-
-    &:first-child {
-      margin-right: 2rem;
-    }
-
-  }
+.content-box {
+  background-color: white;
+  border-radius: 6px;
+  padding: 0 1rem;
 }
 
-.search-row {
-  app-landing-card {
-    width: 100%;
-  }
+.schema-diagram-container {
+  width: 10px;
+  flex-grow: 1;
+  margin-left: 1rem;
+  margin-right: 3rem;
+}
+app-schema-diagram {
+  height: 800px;
+}
+
+.changelog-container {
+  width: 10px;
+  flex-grow: 1;
+  max-width: 35rem;
+  overflow: auto;
+}
+
+app-changelog-list {
+  display: block;
+}
+app-search-bar-container {
+  display: block;
+  margin-bottom: 1rem;
 }
