--- a/vyne-query-service/src/main/web/src/app/landing-page/landing-page.component.scss
+++ b/vyne-query-service/src/main/web/src/app/landing-page/landing-page.component.scss
@@ -5,7 +5,6 @@
   width: 100%;
   height: 100%;
   flex-grow: 1;
-  padding: 2rem 0 0; // override padding to remove the bottom
 }
 
 .container {
@@ -29,6 +28,12 @@
   margin-left: 1rem;
   margin-right: 3rem;
 }
+
+app-header-bar {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
 app-schema-diagram {
   height: 800px;
 }
