--- a/vyne-query-service/src/main/web/src/app/schema-diagram/schema-diagram/schema-diagram.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-diagram/schema-diagram/schema-diagram.component.scss
@@ -1,4 +1,10 @@
+:host {
+  display: flex;
+  flex-direction: column;
+}
+
 .wrapper {
-  height: 100%;
+  height: 1px;
+  flex-grow: 1;
   width: 100%;
 }
