chore(ui/schema-diagram): tweak layout

--- a/vyne-query-service/src/main/web/src/taxi-playground-app/taxi-playground-app.component.scss
+++ b/vyne-query-service/src/main/web/src/taxi-playground-app/taxi-playground-app.component.scss
@@ -3,6 +3,12 @@
   flex-direction: column;
   height: 100vh;
 }
+
 .container {
   flex-grow: 1;
+}
+
+app-schema-diagram {
+  flex-grow: 1;
+  height: 100%;
 }
