--- a/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer-container.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer-container.component.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
 }
 
 .spacer {
@@ -25,4 +26,8 @@
 }
 
 
-
+.container {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
