--- a/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
@@ -5,12 +5,13 @@
   background-color: $body-bg;
   display: flex;
   flex-direction: column;
-  height: 100%;
+  width: 10px;
+  flex-grow: 1;
   margin: 1rem 2rem;
 }
 
 .header-bar {
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   display: flex;
 }
 
@@ -23,4 +24,11 @@ app-code-viewer {
   border-radius: 4px;
 }
 
+.tab-bar {
+  margin-bottom: 1rem;
 
+  img {
+    margin-right: 1rem;
+    opacity: 0.5;
+  }
+}
