--- a/vyne-query-service/src/main/web/src/app/schema-diagram/schema-diagram/schema-diagram.component.scss
+++ b/vyne-query-service/src/main/web/src/app/schema-diagram/schema-diagram/schema-diagram.component.scss
@@ -11,12 +11,31 @@
   width: 100%;
 }
 
-.toolbar {
-  width: 100%;
-  display: flex;
-  align-items: center;
+// .toolbar {
+//   width: 100%;
+//   display: flex;
+//   align-items: center;
 
-  .spacer {
-    flex-grow: 1;
-  }
+//   .spacer {
+//     flex-grow: 1;
+//   }
+// }
+
+.toolbar {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  z-index: 100;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+
+  padding: 30px 10px;
+}
+
+mat-mini-fab {
+  color: white;
+  width: 30px;
+  height: 30px;
 }
