--- a/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.html
+++ b/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.html
@@ -15,6 +15,9 @@
     </button>
   </tui-tabs>
 </div>
+<app-schema-explorer-table *ngIf="activeTabIndex == 0" [partialSchema$]="partialSchema$" [editable]="false"
+                           [schema]="schema"
+                           [allowTryItOut]="true"></app-schema-explorer-table>
 <app-changelog-list *ngIf="activeTabIndex == 1" [changeLogEntries]="changelogEntries | async"></app-changelog-list>
 <app-code-viewer [sources]="parsedPackage?.sources" sidebarMode="Visible"
                  *ngIf="activeTabIndex == 2 && parsedPackage?.sources?.length>0"></app-code-viewer>
