--- a/vyne-query-service/src/main/web/src/taxi-playground-app/styles.scss
+++ b/vyne-query-service/src/main/web/src/taxi-playground-app/styles.scss
@@ -102,3 +102,8 @@ $vyne-app-theme: mat.define-light-theme($primary-palette, $accent-palette);
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($vyne-app-theme);
+
+
+.cc-window {
+  font-size: 14px !important;
+}
